@@ -27,6 +27,7 @@ use constant KEY_VIEW            => 20;
 use constant KEY_REDRAW          => 21;
 use constant KEY_OPEN_URL        => 22;
 use constant KEY_FAVORITES       => 23;
+use constant KEY_RT_BY_ME        => 24;
 
 has 'keymap' => (
 	is => 'rw',
@@ -63,6 +64,7 @@ sub BUILD {
 		BaconBird::KeyMap::KEY_REDRAW            => { key => '^L',    desc => 'Redraw screen.' },
 		BaconBird::KeyMap::KEY_OPEN_URL          => { key => 'o',     desc => 'Open URL in default browser.' },
 		BaconBird::KeyMap::KEY_FAVORITES         => { key => 'V',     desc => 'Show favorite tweets.' },
+		BaconBird::KeyMap::KEY_RT_BY_ME          => { key => '6',     desc => 'Show tweets retweeted by me.' },
 		BaconBird::KeyMap::KEY_CANCEL            => { key => "ESC",   internal => 1 },
 		BaconBird::KeyMap::KEY_ENTER             => { key => "ENTER", internal => 1 },
 	});
