@@ -6,6 +6,7 @@ Changes for baconbird:
 	Added "Open URLs in browser" key.
 	Implemented highlighting of phrases within tweets.
 	Implemented filters to hide certain tweets.
+	Added "retweeted by me" timeline.
 
 0.2 (2010-10-21):
 	Added detailed view of current tweet.
